k8s/manifests-c0aec4/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-c0aec4
  namespace: journee
  labels:
    app: journee-c0aec4
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-c0aec4
  template:
    metadata:
      labels:
        app: journee-c0aec4
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-c0aec4
          image: gcr.io/my-docker-471807/journee:v7.3.0
          ports:
            - containerPort: 3000
