k8s/manifests-c0aec4/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-c0aec4
  namespace: journee
spec:
  selector:
    app: journee-c0aec4
  ports:
    - port: 80
      targetPort: 3000
